charts/alltalk/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alltalk
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - alltalk.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: alltalk
      namespace: alltalk
      port: 7851
