charts/alltalk/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alltalk
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alltalk
  labels:
    app: alltalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alltalk
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alltalk
    spec:
      containers:
        - image: erew123/alltalk_tts:latest-xtts
          args: ["--config=/config/config.json"]
          imagePullPolicy: IfNotPresent
          name: alltalk
          ports:
            - containerPort: 7851
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/models
              name: storage
              subPath: models
            - mountPath: /app/outputs
              name: storage
              subPath: outputs
            - mountPath: /app/finetune
              name: storage
              subPath: finetune
            - mountPath: /app/voices
              name: storage
              subPath: voices
            - mountPath: /config
              name: config
          resources:
            limits:
              nvidia.com/gpu: "1"
            requests:
              nvidia.com/gpu: "1"
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: alltalk-storage
        - name: config
          configMap:
            name: alltalk-config
---
apiVersion: v1
kind: Service
metadata:
  name: alltalk
  labels:
    app: alltalk
spec:
  selector:
    app: alltalk
  type: ClusterIP
  ports:
    - name: http
      port: 7851
      protocol: TCP
      targetPort: 7851
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alltalk
  labels:
    app: alltalk
spec:
  ingressClassName: nginx
  rules:
    - host: alltalk.collins.home
      http:
        paths:
          - backend:
              service:
                name: alltalk
                port:
                  number: 7851
            path: /
            pathType: Prefix
